--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <a href="index.html">
         <picture>
           <source="logos/logoscentrodecompras.webp" type="image/webp">
-          <img src="logos/logoscentrodecompras.jpg" alt="Logotipo do Centro de Compras, maior portal de compras do Brasil" class="logo-img" width="200" height="100" loading="lazy" onerror="this.src='logos/placeholder-logo.png'">
+          <img src="logos/logoscentrodecompras.jpeg" alt="Logotipo do Centro de Compras, maior portal de compras do Brasil" class="logo-img" width="200" height="100" loading="lazy" onerror="this.src='logos/placeholder-logo.png'">
         </picture>
       </div>
     <div class="header-text">
