--- a/index.html
+++ b/index.html
@@ -1,49 +1,60 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="google-adsense-account" content="ca-pub-4531749081462125">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba.">
+  <meta property="og:title" content="Centro de Compras - Ofertas">
+  <meta property="og:description" content="Encontre as melhores ofertas em lojas confiáveis com links de afiliados seguros.">
+  <meta property="og:image" content="logos/centrodecompras.jpg">
+  <meta property="og:url" content="https://www.centrodecompra.com.br/">
   <meta name="twitter:card" content="summary_large_image">
   <title>Centro de Compras - Ofertas do Dia</title>
-  <script async src="https://pagead.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531749081462125" crossorigin="anonymous"></script>
-  <link rel="preload" href="logos/logoscentrodecompras.jpg" as="image">
+  <link rel="preload" href="logos/centrodecompras.jpg" as="image">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
-  <link rel="icon" type="image/png" sizes="32x32" href="logos/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="logos/favicon-16x16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="logos/apple-touch-icon.png">
-  <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <header class="site-header">
-    <div class="logo-container">
-      <a href="index.html">
-        <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" id="logo" width="200" height="100" onerror="this.src='logos/placeholder-logo.png'">
-      </a>
-    </div>
-    <div class="header-text">
-      <h1>Centro de Compra</h1>
-      <p>O maior portal de compras do Brasil! Encontre as melhores ofertas.</p>
+    <div class="container">
+      <div class="flex items-center justify-between">
+        <div class="logo-container">
+          <a href="index.html">
+            <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" id="site-logo-img" width="150" height="50">
+          </a>
+        </div>
+        <div class="header-text">
+          <h1>Centro de Compras</h1>
+          <p>As melhores ofertas do Brasil</p>
+        </div>
+        <button class="md:hidden toggle-menu" aria-label="Abrir menu">
+          <i class="fas fa-bars"></i>
+        </button>
+      </div>
+      <nav class="nav-menu hidden md:flex">
+        <a href="index.html">Promoções</a>
+        <a href="cupom.html">Cupom de Desconto</a>
+        <a href="sobre.html">Sobre</a>
+        <a href="contato.html">Contato</a>
+      </nav>
+      <nav class="nav-mobile hidden">
+        <a href="index.html">Promoções</a>
+        <a href="cupom.html">Cupom de Desconto</a>
+        <a href="sobre.html">Sobre</a>
+        <a href="contato.html">Contato</a>
+      </nav>
     </div>
   </header>
 
-  <nav>
-    <a href="index.html">Promoções</a>
-    <a href="cupom.html">Cupom de Desconto</a>
-    <a href="sobre.html">Sobre Nós</a>
-    <a href="contato.html">Contato</a>
-  </nav>
-
   <div class="container">
     <aside class="sidebar">
-      <h2 class="categorias">Categorias</h2>
+      <h3>Categorias</h3>
       <ul>
         <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')"><i class="fas fa-list mr-2"></i>Todas</li>
-        <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')"><i class="fas fa-laptop mr-2"></i>Elettrônicos</li>
+        <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')"><i class="fas fa-laptop mr-2"></i>Eletrônicos</li>
         <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')"><i class="fas fa-tshirt mr-2"></i>Moda</li>
         <li class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')"><i class="fas fa-dumbbell mr-2"></i>Fitness</li>
         <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')"><i class="fas fa-home mr-2"></i>Casa</li>
@@ -63,16 +74,9 @@
 
     <main>
       <section>
-        <h2>🛍️ Ofertas do Dia</h2>
-        <ins class="adsbygoogle"
-             style="display:inline-block;width:728px;height:90px"
-             data-ad-client="ca-pub-4531749081462125"
-             data-ad-slot="5690664546"></ins>
-        <script>
-             (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+        <h2>Ofertas do Dia</h2>
         <div class="lojas-parceiras">
-          <h3>🌟 Lojas Parceiras</h3>
+          <h3>Lojas Parceiras</h3>
           <div class="grid-lojas">
             <div class="loja-todas ativa" onclick="filtrarPorLoja('todas')"><span>Todas as Lojas</span></div>
             <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')">
@@ -109,24 +113,30 @@
       </section>
       <div class="social-links">
         <a href="https://www.tiktok.com/@cdc.centraldecompras" target="_blank" rel="noopener noreferrer">
-          <div class="icon"><img src="logos/tiktok.png" alt="TikTok" loading="lazy" width="24" height="24"></div>
+          <div class="icon"><i class="fab fa-tiktok"></i></div>
           <span>TikTok</span>
         </a>
-        <a href="https://www.instagram.com/cdccentrodecompra/" target="_blank" rel="noopener noreferrer">
-          <div class="icon"><img src="logos/Instagram.png" alt="Instagram" loading="lazy" width="24" height="24"></div>
+        <a href="https://www.instagram.com/cdccentrodecompras/" target="_blank" rel="noopener noreferrer">
+          <div class="icon"><i class="fab fa-instagram"></i></div>
           <span>Instagram</span>
         </a>
         <a href="https://x.com/ComprasCdc" target="_blank" rel="noopener noreferrer">
-          <div class="icon"><img src="logos/X.png" alt="X" loading="lazy" width="24" height="24"></div>
+          <div class="icon"><i class="fab fa-x-twitter"></i></div>
           <span>X</span>
         </a>
-        <a href="https://www.youtube.com/channel/UCaKHl stealth="noopener noreferrer">
-          <div class="icon"><img src="logos/youtube.png" alt="YouTube" loading="lazy" width="24" height="24"></div>
+        <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank" rel="noopener noreferrer">
+          <div class="icon"><i class="fab fa-youtube"></i></div>
           <span>YouTube</span>
         </a>
       </div>
-      <a href="https://api.whatsapp.com/send?phone=5521975179737" class="whatsapp" target="_blank" rel="noopener noreferrer">📲 WhatsApp</a>
-      <a href="https://t.me/centraldecomprascdc" class="telegram" target="_blank" rel="noopener noreferrer">📢 Telegram</a>
+      <div class="contact-links">
+        <a href="https://api.whatsapp.com/send?phone=5521975179737" class="whatsapp" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-whatsapp"></i> WhatsApp
+        </a>
+        <a href="https://t.me/centraldecomprascdc" class="telegram" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-telegram"></i> Telegram
+        </a>
+      </div>
     </main>
   </div>
 
@@ -140,45 +150,31 @@
     </div>
   </div>
 
-  <footer class="site-footer">
-    <div class="footer-container">
-      <div class="footer-section">
-        <h3>Sobre o Centro de Compras</h3>
-        <p>O maior portal de compras do Brasil, conectando você às melhores ofertas das principais lojas online.</p>
-      </div>
-      <div class="footer-section">
-        <h3>Links Úteis</h3>
-        <ul>
-          <li><a href="index.html">Promoções</a></li>
-          <li><a href="cupom.html">Cupons de Desconto</a></li>
-          <li><a href="sobre.html">Sobre Nós</a></li>
-          <li><a href="contato.html">Contato</a></li>
-          <li><a href="politica-privacidade.html">Política de Privacidade</a></li>
-        </ul>
-      </div>
-      <div class="footer-section">
-        <h3>Contato</h3>
-        <p><i class="fas fa-envelope"></i> <a href="mailto:contato@centrodecompras.com.br">contato@centrodecompras.com.br</a></p>
-        <p><i class="fas fa-phone"></i> <a href="tel:+5521975179737">+55 21 97517-9737</a></p>
-      </div>
-      <div class="footer-section">
-        <h3>Siga-nos</h3>
-        <div class="footer-social">
-          <a href="https://www.tiktok.com/@cdc.centraldecompras" target="_blank" rel="noopener noreferrer"><i class="fab fa-tiktok"></i></a>
-          <a href="https://www.instagram.com/cdccentrodecompras/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
-          <a href="https://x.com/ComprasCdc" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i></a>
+  <footer>
+    <div class="container">
+      <div class="footer-content">
+        <div>
+          <h4>Centro de Compras</h4>
+          <p>O maior portal de compras do Brasil! Encontre as melhores ofertas.</p>
+        </div>
+        <div>
+          <h4>Links Úteis</h4>
+          <ul>
+            <li><a href="index.html">Promoções</a></li>
+            <li><a href="cupom.html">Cupom de Desconto</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="contato.html">Contato</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4>Contato</h4>
+          <ul>
+            <li><a href="https://api.whatsapp.com/send?phone=5521975179737">WhatsApp</a></li>
+            <li><a href="https://t.me/centraldecomprascdc">Telegram</a></li>
+          </ul>
         </div>
       </div>
-    </div>
-    <div class="footer-bottom">
-      <p>© <span id="year"></span> Centro de Compras. Todos os direitos reservados.</p>
-      <div class="footer-payment-methods" style="display: none;">
-        <img src="logos/pix.png" alt="Pix" width="40" height="40">
-        <img src="logos/visa.png" alt="Visa" width="40" height="40">
-        <img src="logos/mastercard.png" alt="Mastercard" width="40" height="40">
-        <img src="logos/boleto.png" alt="Boleto" width="40" height="40">
-      </div>
+      <p>Todos os direitos reservados © Grupo Centro de Compra "CdC" <span id="year"></span></p>
     </div>
   </footer>
 
