--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
   <header class="site-header">
     <div class="logo-container">
-      <a href="/index.html">
+      <a href="/index.html" id="logo-link">
         <img src="/logos/logoscentrodecompras.jpeg" alt="Centro de Compras" id="site-logo-img" width="150" height="50" loading="lazy">
       </a>
     </div>
@@ -49,26 +49,26 @@
   </nav>
 
   <div class="container">
-    <button class="sidebar-toggle" aria-expanded="true" aria-controls="sidebar">☰ Categorias</button>
+    <button class="sidebar-toggle" aria-expanded="false" aria-controls="sidebar">☰ Categorias</button>
     <aside class="sidebar" id="sidebar">
       <h3>Categorias</h3>
       <ul>
         <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')"><i class="fas fa-list"></i>Todas</li>
         <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')"><i class="fas fa-laptop"></i>Eletrônicos</li>
-        <li class="categoria-item" data-categoria="moda"" onclick="filtrarPorCategoria("moda')"><i class="fas fa-tshirt"></i>Moda</li>
-        <li class="categoria-item" data-categoria="fitness"" onclick="filtrarPorCategoria("fitness')"><i class="fas fa-dumbbell"></i>Fitness</li>
-        <li class="categoria-item" data-categoria="casa"" onclick="filtrarPorCategoria("casa')"><i class="fas fa-home"></i>Casa</li>
-        <li class="categoria-item" data-categoria="beleza"" onclick="filtrarPorCategoria("beleza')"><i class="fas fa-magic"></i>Beleza</li>
-        <li class="categoria-item" data-categoria="esportes"" onclick="filtrarPorCategoria("esportes')"><i class="fas fa-futbol"></i>Esportes</li>
-        <li class="categoria-item" data-categoria="livros"" onclick="filtrarPorCategoria("livros')"><i class="fas fa-book"></i>Livros</li>
-        <li class="categoria-item" data-categoria="infantil"" onclick="filtrarPorCategoria("infantil')"><i class="fas fa-baby"></i>Infantil</li>
-        <li class="categoria-item" data-categoria="celulares"" onclick="filtrarPorCategoria("celulares')"><i class="fas fa-mobile-alt"></i>Celulares</li>
-        <li class="categoria-item" data-categoria="eletrodomesticos"" onclick="filtrarPorCategoria("eletrodomesticos')"><i class="fas fa-blender"></i>Eletrodomésticos</li>
-        <li class="categoria-item" data-categoria="pet"" onclick="filtrarPorCategoria("pet')"><i class="fas fa-paw"></i>Pet</li>
-        <li class="categoria-item" data-categoria="jardinagem"" onclick="filtrarPorCategoria("jardinagem')"><i class="fas fa-leaf"></i>Jardinagem</li>
-        <li class="categoria-item" data-categoria="automotivo"" onclick="filtrarPorCategoria("automotivo')"><i class="fas fa-car"></i>Automotivo</li>
-        <li class="categoria-item" data-categoria="gastronomia"" onclick="filtrarPorCategoria("gastronomia')"><i class="fas fa-utensils"></i>Gastronomia</li>
-        <li class="categoria-item" data-categoria="games"" onclick="filtrarPorCategoria("games')"><i class="fas fa-gamepad"></i>Games</li>
+        <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')"><i class="fas fa-tshirt"></i>Moda</li>
+        <li class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')"><i class="fas fa-dumbbell"></i>Fitness</li>
+        <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')"><i class="fas fa-home"></i>Casa</li>
+        <li class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')"><i class="fas fa-magic"></i>Beleza</li>
+        <li class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')"><i class="fas fa-futbol"></i>Esportes</li>
+        <li class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')"><i class="fas fa-book"></i>Livros</li>
+        <li class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')"><i class="fas fa-baby"></i>Infantil</li>
+        <li class="categoria-item" data-categoria="celulares" onclick="filtrarPorCategoria('celulares')"><i class="fas fa-mobile-alt"></i>Celulares</li>
+        <li class="categoria-item" data-categoria="eletrodomesticos" onclick="filtrarPorCategoria('eletrodomesticos')"><i class="fas fa-blender"></i>Eletrodomésticos</li>
+        <li class="categoria-item" data-categoria="pet" onclick="filtrarPorCategoria('pet')"><i class="fas fa-paw"></i>Pet</li>
+        <li class="categoria-item" data-categoria="jardinagem" onclick="filtrarPorCategoria('jardinagem')"><i class="fas fa-leaf"></i>Jardinagem</li>
+        <li class="categoria-item" data-categoria="automotivo" onclick="filtrarPorCategoria('automotivo')"><i class="fas fa-car"></i>Automotivo</li>
+        <li class="categoria-item" data-categoria="gastronomia" onclick="filtrarPorCategoria('gastronomia')"><i class="fas fa-utensils"></i>Gastronomia</li>
+        <li class="categoria-item" data-categoria="games" onclick="filtrarPorCategoria('games')"><i class="fas fa-gamepad"></i>Games</li>
       </ul>
     </aside>
     <main>
