--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/logos/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/logos/favicon-16x16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/logos/apple-touch-icon.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <!-- Comentado para evitar erro 404 até configurar PWA -->
+  <!-- <link rel="manifest" href="/site.webmanifest"> -->
 </head>
 <body>
   <header class="site-header">
